# MediSmart

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pom.xml
medismart-ai/: .env.example  .gitignore  entrypoint.sh  pyproject.toml
medismart-ai/app/: __main__.py
medismart-ai/app/api/v1/: chat.py
medismart-ai/app/core/: config.py
medismart-ai/app/services/: chat.py
medismart-ai/app/services/ai/: agent.py  agent_with_history.py  memory.py
medismart-ai/app/tools/: tools.py
medismart-ui/: .env.development  .env.production  README.md  babel.config.js  package-lock.json  package.json  room-serve.js  serve.js  tsconfig.json  vue.config.js
medismart-ui/public/: index.html
medismart-ui/public/lib/: echarts.min.js
medismart-ui/room-client/: readme.md
medismart-ui/room-client/css/: style.css
medismart-ui/room-client/html/: index.html
medismart-ui/room-client/js/: chat.js
medismart-ui/src/: App.vue  main.js  permission.js
medismart-ui/src/api/: chat.js  graph.js  login.js  user.js
medismart-ui/src/assets/: graph_data.js  style.scss
medismart-ui/src/components/SvgIcon/: index.vue
medismart-ui/src/layout/: navigator.vue
medismart-ui/src/plugins/: index.js  lazy-echarts.js
medismart-ui/src/router/: index.js
medismart-ui/src/store/: getters.js  index.js  search.js  user.js
medismart-ui/src/utils/: array.js  graph.js  jsObj.js  request.js
medismart-ui/src/utils/localstorage/: localstorage.ts
neo4j/dumps/: README.md
neo4j/plugins/: README.md
nginx/conf/: medismart.conf
sql/: sql.sql
src/main/resources/: application.yml
(+188 files in other folders)
